# APKInspect

./: .gitattributes  .gitignore  APKInspect.cmd  APKInspect.command  APKInspect.pyw  INSTALL.txt  Install APKInspect.cmd  Install APKInspect.command  LICENSE  README.md  desktop.ini  pyproject.toml
.github/workflows/: ci.yml
APKInspect.app/Contents/: Info.plist
APKInspect.app/Contents/MacOS/: APKInspect
APKInspect.app/Contents/Resources/: icon.icns
apkinspect/: __init__.py  __main__.py  aab.py  axml.py  baseline.py  catalog.py  manifest.py  model.py  nsc.py  permissions.py  report.py  scanner.py  scoring.py  secrets.py  signing.py
apkinspect/web/: __init__.py  __main__.py  server.py
apkinspect/web/static/: app.js  index.html  styles.css
samples/: clean.apk  vulnerable.aab  vulnerable.apk
tests/: fixtures.py  test_aab.py  test_axml.py  test_baseline.py  test_cli.py  test_manifest.py  test_nsc.py  test_sarif.py  test_scanner.py  test_scoring.py  test_secrets.py  test_signing.py  test_web.py
tools/: make_icon.py  make_samples.py
