[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apkinspect"
version = "1.0.0"
description = "Self-contained static security scanner for Android APK/AAB files."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["android", "apk", "aab", "security", "scanner", "sast", "mobile"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Environment :: Console",
]
dependencies = []   # intentionally zero runtime dependencies

[project.scripts]
apkinspect = "apkinspect.__main__:main"
apkinspect-gui = "apkinspect.web.__main__:main"

[tool.setuptools]
packages = ["apkinspect", "apkinspect.web"]

[tool.setuptools.package-data]
"apkinspect.web" = ["static/*"]
